# myprog

./: .gitignore  partner-charts-stats.sh  recursive.sh
Bash/: 1-add-soc-repos-sync.sh  2-add-cloud-repos-local.sh  3-adding-veth.sh  adding-veth.sh  attept  cd  church-bday.sh  del-veth.sh  install_vm  install_vm-2.sh  install_vm_old.sh  kdump-mem  kdump-mem.sh  myvm  original.txt  pciPassThru  program.sh  ready-list.txt  regex-bash-test.sh  setup_vm.sh  setupcore11_1_6.sh  smtsetup.sh  sriov_setup  testarray.sh  virt-inst-1.1.sh  virt-inst.sh  virt-setup.sh  vm-inst.sh  vm-install.sh
C/: 21days-src.tgz  bus1-4  bus1-4.c~  c-virt-inst.c  c_prog.tgz  ex2-4  ex2-4.c  ex2-4.c~  ex3-1  ex3-1.c  ex3-1.c~  ex3-3.c  ex3-3.c~  ex4-10  ex4-10.c  ex4-10.c~  ex4-10~  ex4-11  ex4-11.c  ex4-11.c~  ex6-10  ex6-10.c  ex6-10.c~  ex6-11  ex6-12.c  ex6-3  ex6-4  ex6-4.c~  ex6-5  ex6-5.c  ex6-6  ex6-6.c  ex6-6.c~  ex7-10  ex7-10.c  ex7-10.c~  ex7-7  ex7-7.c~  ex7-8  ex7-8.c  (+21 more)
Perl/: ibm_summary_1.3.pl  myregex.pl  perl-virt-inst.pl
autoyast/: 11sp4autoinst.xml  SLES11_SP3-x86_64-single_disk-GRUB.xml  sles12-phy-uefi.xml  sles12-vm-autoinst.xml
docker/: docker-compose.yml  vis-orig-docker-compose.yml
k8s/: cilium-net.yaml  net-pol.yaml  one-pod.yaml  pod-a-b.yaml
python/: 2stu_object.py  basic_string_find.py  class_InventoryItem.py  class_eq.py  class_gte.py  clean_input.py  dic.py  func.py  hello.py  if-else.py  input.py  list.py  num_guess.py  (+7 more)
python/serious_python_book/mypackage/: setup.cfg  setup.py
python/serious_python_book/mypackage/foobar.egg-info/: PKG-INFO  SOURCES.txt
(+1834 files in other folders)
